# SmartWeatherApp

./: .actrc  .gitignore  .gitmodules  .wslconfig-note.md  BUILD-INSTRUCTIONS.md  CMakeLists.txt  install-act.sh  readme.md  run-workflow.ps1  test-linux-workflow.sh  test-workflow.ps1
.github/: ACT_TESTING.md  README.md
.github/workflows/: linux-build.yml  windows-build.yml
foreplan/: CMakeLists.txt
foreplan/resources/linux/: create_icon.sh  foreplan.desktop.in  resources.cmake
foreplan/src/: Filewatcher.hpp  Main.cpp  Utils.hpp  Weather.hpp
foreplan/web/: .firebaserc  index.html  package-lock.json  package.json
foreplan/web/src/: App.tsx
foreplan/web/src/components/: Card.tsx  ProtectedRoute.tsx
foreplan/web/src/config/: env.ts  firebase.ts
foreplan/web/src/context/: AuthContext.tsx
foreplan/web/src/pages/: WeatherApp.tsx
foreplan/web/src/styles/: App.css  Card.css  Header.css  WeatherApp.css
smartweatherapp/: CMakeLists.txt
smartweatherapp/frontend/: package-lock.json  package.json  vite.config.ts
smartweatherapp/frontend/.firebase/: hosting.ZGlzdA.cache
smartweatherapp/frontend/src/: App.tsx
smartweatherapp/frontend/src/components/: CardContainer.tsx  WeatherApp.tsx
smartweatherapp/frontend/src/context/: AuthContext.tsx  ThemeContext.tsx  UserContext.tsx  WeatherContext.tsx
smartweatherapp/frontend/src/pages/: AuthBoarding.tsx  Header.tsx  WeatherApp.tsx
smartweatherapp/frontend/src/styles/: App.css  AuthBoarding.css  Header.css  WeatherApp.css  index.css
smartweatherapp/resources/linux/: create_icon.sh  resources.cmake  smartweatherapp.desktop.in
smartweatherapp/src/: Filewatcher.hpp  Main.cpp  Utils.hpp  Weather.hpp
